McStas-2.5_CPU_MPICC/Test_Pol_Bender/compile_stdout.txt
[1574207507.447462] [n-62-23-6:13702:0]         sys.c:744  MXM  WARN  Conflicting CPU frequencies detected, using: 3379.52
[1574207507.448720] [n-62-23-6:13702:0]      ib_dev.c:533  MXM  WARN  failed call to ibv_exp_use_priv_env(): Function not implemented
[1574207507.448723] [n-62-23-6:13702:0]      ib_dev.c:544  MXM  ERROR ibv_query_device() returned 38: Function not implemented
[1574207507.450521] [n-62-23-6:13702:0]      ib_dev.c:533  MXM  WARN  failed call to ibv_exp_use_priv_env(): Function not implemented
[1574207507.450524] [n-62-23-6:13702:0]      ib_dev.c:544  MXM  ERROR ibv_query_device() returned 38: Function not implemented
begin instrument: Test_Pol_Bender
  Creator: McStas 2.5 - Nov. 19, 2019
  Source: /zhome/89/0/38697/TESTS/2019-11-20/McStas-2.5_CPU_MPICC/Test_Pol_Bender/Test_Pol_Bender.instr
  Parameters:  GUIDELENGTH(double) GUIDERADIUS(double) ENDOPTION(int) NSLITS(int) WSPACER(double) DRAWOPTION(int)
  Trace_enabled: yes
  Default_main: yes
  Embedded_runtime: yes
end instrument
begin simulation: .
  Format: McStas
  URL: http://www.mccode.org
  Creator: McStas 2.5 - Nov. 19, 2019
  Instrument: /zhome/89/0/38697/TESTS/2019-11-20/McStas-2.5_CPU_MPICC/Test_Pol_Bender/Test_Pol_Bender.instr
  Ncount: 1000000
  Trace: no
  Gravitation: no
  Seed: 1574221209
  Directory: .
  Param: GUIDELENGTH=1
  Param: GUIDERADIUS=10
  Param: ENDOPTION=0
  Param: NSLITS=5
  Param: WSPACER=0.005
  Param: DRAWOPTION=1
end simulation
info!
INFO: No output directory specified (--dir)
INFO: Using directory: "Test_Pol_Bender_20191120_005144"
INFO: Regenerating c-file: Test_Pol_Bender.c
Warning: Using DEFINITION parameter of component Pol_bender() (potential syntax error) at line /zhome/89/0/38697/TESTS/2019-11-20/McStas-2.5_CPU_MPICC/Test_Pol_Bender/Test_Pol_Bender.instr:101
  rTopUpPar={ 0.99 , 0.0219 , 6.07 , 3.0 , 0.003 }
Warning: Using DEFINITION parameter of component Pol_bender() (potential syntax error) at line /zhome/89/0/38697/TESTS/2019-11-20/McStas-2.5_CPU_MPICC/Test_Pol_Bender/Test_Pol_Bender.instr:101
  rTopDownPar={ 0.99 , 0.0219 , 6.07 , 2.0 , 0.003 }
CFLAGS=
INFO: Recompiling: ./Test_Pol_Bender.out
/zhome/89/0/38697/McStas/mcstas/2.5/tools/Python/mcrun/../mccodelib/../../../optics/Pol_bender.comp:140:19: warning: ISO C99 requires whitespace after the macro name
 %{
                   ^
INFO: ===
--------------------------------------------------------------------------
Initialization of MXM library failed.

  Error: Input/output error

--------------------------------------------------------------------------
